--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
-  <script>
-   
-  </script>
+  <script src="/static/script.js"></script>
 </body>
 </html>
